bug(width) :: fix horizontal scroll issue

--- a/wp-content/themes/performance360/src/assets/scss/components/navigation/_top-navigation.scss
+++ b/wp-content/themes/performance360/src/assets/scss/components/navigation/_top-navigation.scss
@@ -11,6 +11,7 @@ header {
     padding: 20px;
     width: 100%;
     background: #fff;
+    left: 0;
 
     ul {
         margin: 0;
